--- a/blog/templates/post_detail.html
+++ b/blog/templates/post_detail.html
@@ -5,7 +5,11 @@
 <h3>{{post.content}}</h3>
 <h3>{{post.create_date}}</h3>
 <h3>{{post.draft}}</h3>
-<h3>{{post.tags}}</h3>
+
+{% for tag in post.tags.all %}
+    <h3>{{tag}}</h3>
+{% endfor %}
+
 <h3>{{post.author}}</h3>
 
 <img src="{{post.image.url}}" alt="">
